# Polyhedron-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Bugs & Feature Requests  CMakeLists.txt  CMakeSettings.json  Client.cmake  ClientGame.cmake  NAC_CrashReportXX00xt  NAC_CrashReportXX01xt  NAC_CrashReportXX02xt  NAC_CrashReportXX03xt  Nail-Crescent - PMove 1.0 Beta - Lightstyle fix.rar  Nail-Crescent - PMove 1.0 Beta.rar  Nail-Crescent.rar  Q2RTX_CrashReport00.txt  README.md  Server.cmake  ServerGame.cmake  SourceList.cmake  build.yaml  build_materials.py  changelog.md  compile_shaders.bat  dev.rar  index.md  launch_kmnac.sh  launch_nacded.sh  license.txt  localnacded.bat  nacded  nacded.bat  nacdev.bat  notice.txt  pmove-new-0.1.rar  pmove-new-0.5.2.rar  polyconfig.cfg  readme.md  startcoop.bat  (+1 more)
kmnac/: CMakeLists.txt
kmnac/game/: acebot_ai.c  g_cmds.c  g_combat.c  g_crane.c  g_fog.c  g_func.c  g_func_decs.h  g_func_list.h  g_items.c  g_lights.c  g_local.h  g_misc.c  g_model.c  g_phys.c  g_save.c  g_spawn.c  g_target.c  g_tracktrain.c  g_trigger.c  g_utils.c  g_vehicle.c  g_weapon.c  km_cvar.c  laz_misc.h  m_actor.c  m_boss2.c  m_boss32.c  m_flipper.c  m_gunner.c  m_medic.c  m_mutant.c  m_soldier.c  m_supertank.c  m_tank.c  p_client.c  p_text.c  p_view.c  p_weapon.c  q_shared.c  q_shared.h
src/: CMakeLists.txt
src/CLGame/: ClientGameExports.cpp  ClientGameExports.h  ClientGameImports.cpp  ClientGameImports.h  ClientGameLocal.h  ClientGameLocals.h  Debug.cpp  Debug.h  Effects.cpp  Effects.h  Entities.cpp  Entities.h  Input.cpp  LevelLocals.h  Main.cpp  Main.h  Media.cpp  Media.h  NewEffects.cpp  NewEffects.h  Parse.cpp  Predict.cpp  Predict.h  Screen.cpp  Screen.h  TemporaryEntities.cpp  View.cpp  View.h
src/Client/: ASCII.cpp  CMakeLists.txt  CRC.cpp  Cinematic.cpp  Client.h  ClientGame.cpp  Console.cpp  Demo.cpp  Download.cpp  Entities.cpp  Entities.h  GameModule.h  HTTP.cpp  Input.cpp  Keys.cpp  Locations.cpp  Main.cpp  Models.cpp  Models.h  Null.cpp  NullGL.cpp  Parse.cpp  Precache.cpp  Predict.cpp  Refresh.cpp  Screen.cpp  Traces.cpp  Traces.h  UI.h  View.cpp  World (2).cpp  World.cpp  World.h  WorldBSP.cpp
src/Common/: Bsp.cpp  Bsp.h  CModel.cpp  CModel.h  CVar.cpp  Cmd.cpp  CollisionModel.cpp  CollisionModel.h  Common.cmake  Common.cpp  Common.h  EntitySkeleton.cpp  EntitySkeleton.h  Error.cpp  Field.cpp  Fifo.cpp  Files.cpp  HalfFloat.h  Huffman.cpp  Huffman.h  MDFour.cpp  Messaging.cpp  Messaging.h  Msg.cpp  Msg.h  PlayerMove.h  Prompt.cpp  Prompt.h  Protocol.h  SizeBuffer.cpp  SizeBuffer.h  SkeletalModelData.cpp  SkeletalModelData.h  TemporaryBoneCache.cpp  TemporaryBoneCache.h  Tests.cpp  Utilities.cpp  Utilities.h  Zone.cpp  _Msg.cpp  (+2 more)
src/Refresh/: Images.h  Models.h  Refresh.cmake  Refresh.h  images.cpp  model_iqm.cpp  models.cpp
src/SVGame/: Ballistics.cpp  BrushFunctions.cpp  BrushFunctions.h  ChaseCamera.cpp  Combat.cpp  Commands.cpp  Effects.cpp  Effects.h  Entities.cpp  Entities.h  FunctionPointers.cpp  GameLocals.cpp  GameLocals.h  ImportsWrapper.cpp  Items.cpp  Main.cpp  SVCommands.cpp  Save.cpp  ServerGameLocal.h  ServerGameLocals.cpp  ServerGameLocals.h  Spawn.cpp  Trigger.cpp  Trigger.h  TypeInfo.h  Utilities.cpp  Utilities.h  Weapons.cpp  effects.h  entities.cpp  g_local.h  main.cpp
src/Server/: Commands.cpp  Entities.cpp  Init.cpp  Main.cpp  Models.cpp  Models.h  SVGame.cpp  Save.cpp  Send.cpp  Send_Old.cpp  Server.cmake  Server.h  User.cpp  World.cpp  init.cpp  main.cpp  send_old.cpp  user.cpp
src/Shared/: CLGame.h  CLTypes.h  Collision.h  CollisionModel.h  Common.h  Config.h  Entities.h  EntitySkeleton.h  GeneralPurposeParser.cpp  GeneralPurposeParser.h  KeyValue.h  Keys.h  Math.cpp  Math.h  Messaging.h  PlayerMove.h  QString.h  Refresh.h  SVGame.h  Shared.cmake  Shared.cmakexx  Shared.cpp  Shared.h  SkeletalModelData.cpp  SkeletalModelData.h  Sound.h  TickRate.h  UI.h  shared.cpp
src/SharedGame/: PMove.cpp  SkeletalAnimation.cpp
src/System/: Hunk.h  System.cmake  System.h
src/baseq2/: g_func.c  g_local.h  g_main.c  g_misc.c  g_monster.c  g_ptrs.c  g_spawn.c  m_berserk.c  m_boss3.c  m_brain.c  m_chick.c  m_float.c  m_gladiator.c  m_infantry.c  m_insane.c  m_medic.c  m_mutant.c  m_parasite.c  m_soldier.c  m_supertank.c  p_client.c  p_hud.c  p_view.c  p_weapon.c
src/clgame/: ClientGameExports.cpp  ClientGameExports.h  ClientGameImports.cpp  ClientGameImports.h  ClientGameLocal.h  NewEffects.cpp  NewEffects.h  Screen.cpp  TemporaryEntities.cpp  View.cpp  clg_effects.c  clg_effects.cpp  clg_effects.h  clg_entities.c  clg_entities.cpp  clg_entities.h  clg_input.cpp  clg_input.h  clg_local.h  clg_main.c  clg_main.cpp  clg_main.h  clg_media.c  clg_media.cpp  clg_media.h  clg_newfx.cpp  clg_newfx.h  clg_parse.c  clg_parse.cpp  clg_parse.h  clg_predict.c  clg_predict.cpp  clg_predict.h  clg_screen.c  clg_screen.cpp  clg_screen.h  clg_tents.c  clg_tents.cpp  clg_tents.h  clg_tests.c  (+4 more)
src/client/: Main.cpp  ascii.cpp  cin.c  cin.cpp  clgame.c  clgame.cpp  client.h  console.c  console.cpp  crc.cpp  demo.c  demo.cpp  download.cpp  effects.c  effects.cpp  entities.c  entities.cpp  gtv.c  gtv.cpp  http.cpp  input.c  input.cpp  keys.cpp  locs.c  locs.cpp  main.c  main.cpp  null.c  null.cpp  null_gl.c  null_gl.cpp  parse.c  parse.cpp  precache.c  precache.cpp  predict.c  predict.cpp  refresh.c  refresh.cpp  screen.c  (+4 more)
src/common/: bsp.c  bsp.cpp  cmd.cpp  cmodel.c  cmodel.cpp  common.c  common.cpp  cvar.c  cvar.cpp  error.cpp  field.cpp  fifo.cpp  files.c  files.cpp  huffman.cpp  mdfour.cpp  msg.c  msg.cpp  prompt.cpp  sizebuf.cpp  tests.cpp  utils.c  utils.cpp  zone.cpp
src/refresh/: images.cpp  model_iqm.cpp  models.c  models.cpp
src/server/: ac.cpp  commands.cpp  entities.cpp  game.c  init.c  init.cpp  main.c  main.cpp  mvd.cpp  save.cpp  send.c  send.cpp  send_old.cpp  server.h  svgame.c  svgame.cpp  user.c  user.cpp  world.cpp
src/shared/: m_flash.cpp  math.c  math.cpp  pmove.c  shared.cpp
src/sharedgame/: _pmove (2).cpp  _pmove (3).cpp  _pmove.cpp  pmove.c  pmove.cpp  pmove_last_attempt.cpp  pmove_nac_old.cpp  pmove_old.cpp  (+2 more)
(+2200 files in other folders)
